--- a/cmakeLists.txt
+++ b/cmakeLists.txt
@@ -1,7 +1,15 @@
 cmake_minimum_required(VERSION 3.12)
-project(${project} VERSION 1.0.0)
+project(modular_exponentiation VERSION 1.0.0)
 
-add_executable(${project} main.cpp)
+add_library(
+	lib
+	./include/modular_exponentiation/power_module.cpp
+	./include/modular_exponentiation/power_module.hpp
+	)
+
+add_executable(main main.cpp)
+
+target_link_libraries(main PUBLIC lib)
 
 # NTL documentation command
 # g++ -g -O2 -std=c++11 -pthread -march=native foo.cpp -o foo -lntl -lgmp -lm
