--- a/cmakeLists.txt
+++ b/cmakeLists.txt
@@ -1,17 +1,22 @@
-cmake_minimum_required(VERSION 3.12)
-project(modular_exponentiation VERSION 1.0.0)
+cmake_minimum_required(VERSION 3.10)
 
-add_library(
-	lib
-	./include/modular_exponentiation/power_module.cpp
-	./include/modular_exponentiation/power_module.hpp
+# set the project name and version
+project(Tutorial VERSION 1.0)
+
+# specify the C++ standard
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# configure a header file to pass some of the CMake settings
+# to the source code
+configure_file(TutorialConfig.h.in TutorialConfig.h)
+
+# add the executable
+add_executable(Tutorial tutorial.cxx)
+
+# add the binary tree to the search path for include files
+# so that we will find TutorialConfig.h
+target_include_directories(
+	Tutorial PUBLIC
+	"${PROJECT_BINARY_DIR}"
 	)
-
-add_executable(main main.cpp)
-
-target_link_libraries(main PUBLIC lib)
-
-# NTL documentation command
-# g++ -g -O2 -std=c++11 -pthread -march=native foo.cpp -o foo -lntl -lgmp -lm
-# objective:
-# g++ main.cpp -g -O2 -std=c++11 -pthread -march=native -o main -lntl -lgmp -lm && ./main
